--- a/index.html
+++ b/index.html
@@ -54,16 +54,27 @@
       <article id="a03">
       <h2 class="wow fadeInDown" data-wow-duration="1s">學校環境</h2>
       <div class="container3">
-      	<div class="img wow pulse" data-wow-duration="1s" data-wow-offset="50"><img src="pic/01.jpg" width="350" height="200" alt=""/></div>
-      	<div class="img wow pulse" data-wow-duration="1s" data-wow-offset="50"><img src="pic/04.jpg" width="350" height="200" alt=""/></div>
-      	<div class="img wow pulse" data-wow-duration="1s" data-wow-offset="150"><img src="pic/05.jpg" width="708" height="200" alt=""/></div>
+      	<div class="img wow pulse" data-wow-duration="1s" data-wow-offset="50">
+      		<img src="pic/01.jpg" width="350" height="200" alt=""/>
+      	</div>
+      	<div class="img wow pulse" data-wow-duration="1s" data-wow-offset="50">
+      		<img src="pic/04.jpg" width="350" height="200" alt=""/>
+      	</div>
+      	<div class="img wow pulse" data-wow-duration="1s" data-wow-offset="150">
+      		<img src="pic/05.jpg" width="708" height="200" alt=""/>
+      	</div>
       </div>
      </article>
 
      <article class="video" id="a04">
      	<h2 class="wow fadeInDown" data-wow-duration="1s" >相關影片</h2>
      	<div class="container4" >
+     		<div class="vid">
+     	<iframe width="560" height="315" src="https://www.youtube.com/embed/dQuVSBP0Eus" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+     </div>
+     <div class="vid">
      	<iframe width="560" height="315" src="https://www.youtube.com/embed/U1uxyl5VyQc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+     </div>
      </iframe>
      </article>
 
